[package]
name = "rmap"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.41"
colored = "3.0.0"
indicatif = "0.18.0"
mlua = { version = "0.11.1", features = ["lua54"] }
serde = "1.0.219"
serde_json = "1.0.141"
tabled = "0.20.0"
tokio = { version = "1.46.1", features = ["full"] }
trust-dns-resolver = "0.23.2"
