[package]
name = "rmap"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
config = "0.15.13"
indicatif = "0.18.0"
mlua = { version = "0.11.1", features = ["lua54", "vendored"] }
num_cpus = "1.16.0"
regex = "1.10.2"
serde = "1.0.219"
serde_json = "1.0.141"
serde_yaml = "0.9.34"
tabled = "0.20.0"
tokio = { version = "1.46.1", features = ["full"] }
trust-dns-resolver = "0.23.2"
